src/test/ui/generic-associated-types/issue-78671.stderr
error[E0107]: missing generics for associated type `CollectionFamily::Member`
  --> $DIR/issue-78671.rs:7:47
   |
LL |     Box::new(Family) as &dyn CollectionFamily<Member=usize>
   |                                               ^^^^^^ expected 1 generic argument
   |
note: associated type defined here, with 1 generic parameter: `T`
  --> $DIR/issue-78671.rs:4:10
   |
LL |     type Member<T>;
   |          ^^^^^^ -
help: add missing generic argument
   |
LL |     Box::new(Family) as &dyn CollectionFamily<Member<T>=usize>
   |                                               ~~~~~~~~~

error[E0038]: the trait `CollectionFamily` cannot be made into an object
  --> $DIR/issue-78671.rs:7:25
   |
LL |     Box::new(Family) as &dyn CollectionFamily<Member=usize>
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `CollectionFamily` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-78671.rs:4:10
   |
LL | trait CollectionFamily {
   |       ---------------- this trait cannot be made into an object...
LL |     type Member<T>;
   |          ^^^^^^ ...because it contains the generic associated type `Member`
   = help: consider moving `Member` to another trait

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0038, E0107.
For more information about an error, try `rustc --explain E0038`.
